# XApps

./: .gitignore  README.md  config.yaml  init.sh  pyproject.toml
.github/workflows/: release.yml
tests/: test_xapps.py
xapps/: __init__.py  __main__.py  apkdl.py  main.py
